force-app/main/default/objects/Career_Intent__c/Career_Intent__c.object-meta.xml
<CustomObject>
    <description>Stores candidate career goals across time horizons</description>
    <label>Career Intent</label>
    <nameField>
        <displayFormat>INTENT-{00000}</displayFormat>
        <label>Career Intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Career Intents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>