force-app/main/default/objects/Career_Intent__c/fields/Aspirational_Goal__c.field-meta.xml
<CustomField>
    <fullName>Aspirational_Goal__c</fullName>
    <label>Aspirational Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>