force-app/main/default/objects/Career_Intent__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Career Intents (Candidate)</relationshipLabel>
    <relationshipName>Career_Intents1</relationshipName>
    <type>Lookup</type>
</CustomField>