force-app/main/default/objects/Career_Intent__c/fields/Check_In_Count__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Count__c</fullName>
    <description>Total check-ins completed</description>
    <label>Check In Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>