force-app/main/default/objects/Career_Intent__c/fields/Check_In_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pause notifications</description>
    <label>Check In Opt Out</label>
    <type>Checkbox</type>
</CustomField>