force-app/main/default/objects/Career_Intent__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Candidate reference (1:1)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Career Intents</relationshipLabel>
    <relationshipName>Career_Intents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>