force-app/main/default/objects/Career_Intent__c/fields/Current_State_Summary__c.field-meta.xml
<CustomField>
    <fullName>Current_State_Summary__c</fullName>
    <label>Current State Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>