force-app/main/default/objects/Career_Intent__c/fields/Deal_Breakers__c.field-meta.xml
<CustomField>
    <fullName>Deal_Breakers__c</fullName>
    <description>Absolute exclusions</description>
    <label>Deal Breakers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>