force-app/main/default/objects/Career_Intent__c/fields/Gap_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Gap_Analysis__c</fullName>
    <label>Gap Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>