force-app/main/default/objects/Career_Intent__c/fields/Inactive_Since__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Since__c</fullName>
    <description>When marked inactive</description>
    <label>Inactive Since</label>
    <type>DateTime</type>
</CustomField>