force-app/main/default/objects/Career_Intent__c/fields/Industry_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Industry_Preferences__c</fullName>
    <label>Industry Preferences</label>
    <type>TextArea</type>
</CustomField>