force-app/main/default/objects/Career_Intent__c/fields/Intent_Captured_Date__c.field-meta.xml
<CustomField>
    <fullName>Intent_Captured_Date__c</fullName>
    <description>When first captured</description>
    <label>Intent Captured Date</label>
    <type>DateTime</type>
</CustomField>