force-app/main/default/objects/Career_Intent__c/fields/Intent_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confidence__c</fullName>
    <description>AI confidence score</description>
    <label>Intent Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>