force-app/main/default/objects/Career_Intent__c/fields/Last_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_In__c</fullName>
    <description>Last monthly check-in</description>
    <label>Last Check In</label>
    <type>DateTime</type>
</CustomField>