force-app/main/default/objects/Career_Intent__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Last modification</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>