force-app/main/default/objects/Career_Intent__c/fields/Long_Term_Goal__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Goal__c</fullName>
    <description>Full text of LATER goal</description>
    <label>Long Term Goal</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>