force-app/main/default/objects/Career_Intent__c/fields/Long_Term_Role__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Role__c</fullName>
    <description>Aspirational role</description>
    <label>Long Term Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>