force-app/main/default/objects/Career_Intent__c/fields/Long_Term_Skills__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Skills__c</fullName>
    <description>Skills to develop</description>
    <label>Long Term Skills</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>