force-app/main/default/objects/Career_Intent__c/fields/Long_Term_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Timeline__c</fullName>
    <description>Expected timeline</description>
    <label>Long Term Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2 Years</fullName>
            </value>
            <value>
                <fullName>2-3 Years</fullName>
            </value>
            <value>
                <fullName>3-5 Years</fullName>
            </value>
            <value>
                <fullName>5-10 Years</fullName>
            </value>
            <value>
                <fullName>10+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>