force-app/main/default/objects/Career_Intent__c/fields/Max_Commute_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Max_Commute_Minutes__c</fullName>
    <description>Maximum commute time</description>
    <label>Max Commute Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>