force-app/main/default/objects/Career_Intent__c/fields/Max_Salary_Expactation__c.field-meta.xml
<CustomField>
    <fullName>Max_Salary_Expactation__c</fullName>
    <description>Maximum salary expectation</description>
    <label>Max Salary Expactation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>