force-app/main/default/objects/Career_Intent__c/fields/Medium_Term_Goal__c.field-meta.xml
<CustomField>
    <fullName>Medium_Term_Goal__c</fullName>
    <label>MediumTerm Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>