force-app/main/default/objects/Career_Intent__c/fields/Min_Salary_Expactation__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary_Expactation__c</fullName>
    <description>Minimum salary expectation</description>
    <label>Min Salary Expactation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>