force-app/main/default/objects/Career_Intent__c/fields/Must_Have_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Must_Have_Constraints__c</fullName>
    <description>Non-negotiable requirements</description>
    <label>Must Have</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>