force-app/main/default/objects/Career_Intent__c/fields/Nice_To_Have__c.field-meta.xml
<CustomField>
    <fullName>Nice_To_Have__c</fullName>
    <description>Preferred but flexible</description>
    <label>Nice To Have</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>