force-app/main/default/objects/Career_Intent__c/fields/Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Role_Title__c</fullName>
    <label>Role Title</label>
    <type>TextArea</type>
</CustomField>