force-app/main/default/objects/Career_Intent__c/fields/Short_Term_Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Company_Size__c</fullName>
    <description>Preferred company size</description>
    <label>Short Term Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup (1-50)</fullName>
            </value>
            <value>
                <fullName>Small (51-200)</fullName>
            </value>
            <value>
                <fullName>Medium (201-1000)</fullName>
            </value>
            <value>
                <fullName>Large (1001-5000)</fullName>
            </value>
            <value>
                <fullName>Enterprise (5000+)</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>