force-app/main/default/objects/Career_Intent__c/fields/Short_Term_Goal__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Goal__c</fullName>
    <description>Full text of NOW goal</description>
    <label>Short Term Goal</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>