force-app/main/default/objects/Career_Intent__c/fields/Short_Term_Location__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Location__c</fullName>
    <description>Preferred location(s)</description>
    <label>Short Term Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>