force-app/main/default/objects/Career_Intent__c/fields/Short_Term_Remote__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Remote__c</fullName>
    <description>Remote preference</description>
    <label>Short Term Remote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote Only</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>