force-app/main/default/objects/Career_Intent__c/fields/Short_Term_Role__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Role__c</fullName>
    <description>Extracted target role</description>
    <label>Short Term Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>