force-app/main/default/objects/Career_Intent__c/fields/Short_Term_Skills__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Skills__c</fullName>
    <description>Skills mentioned (comma-sep)</description>
    <label>Short Term Skills</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>