force-app/main/default/objects/Career_Intent__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How intent was captured</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>