force-app/main/default/objects/Career_Intent__c/fields/Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_Role__c</fullName>
    <label>Target Role</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>