force-app/main/default/objects/Career_Intent__c/fields/Travel_Willingness__c.field-meta.xml
<CustomField>
    <fullName>Travel_Willingness__c</fullName>
    <description>Travel tolerance</description>
    <label>Travel Willingness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Minimal (0-10%)</fullName>
            </value>
            <value>
                <fullName>Some (10-25%)</fullName>
            </value>
            <value>
                <fullName>Moderate (25-50%)</fullName>
            </value>
            <value>
                <fullName>Heavy (50-75%)</fullName>
            </value>
            <value>
                <fullName>Extensive (75-100%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>